typhon-cluster/apps/jackett/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jackett
  labels:
    pod-security.kubernetes.io/enforce: restricted
