typhon-cluster/apps/jackett/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - jackett.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: jackett
          port: 9117
